--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 
         <title>Image Editor</title>
 
+        <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
 
         <h1>Image Editor</h1>
 
+        <input type="file" name="imgLoader">
 
+        <canvas id="canvas">SAAS</canvas>
 
         <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
         <script async src="https://docs.opencv.org/master/opencv.js" type="text/javascript" id="opencvJSFile"></script>
