--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <canvas id="canvas">SAAS</canvas>
 
         <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
-        <script async src="https://docs.opencv.org/master/opencv.js" type="text/javascript" id="opencvJSFile"></script>
-        <script async src="https://docs.opencv.org/master/utils.js" type="text/javascript"></script>
+        <script src="js/utils.js" type="text/javascript"></script>
+        <script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>
         <script src="js/main.js" type="text/javascript"></script>
 
     </body>
