Bootstrap added to the project.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Image Editor</title>
 
         <link rel="icon" href="img/favicon.png">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -17,6 +18,7 @@
         <canvas id="canvas">SAAS</canvas>
 
         <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
         <script src="js/utils.js" type="text/javascript"></script>
         <script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>
         <script src="js/main.js" type="text/javascript"></script>
