HTML file structure changed.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <title>Image Editor</title>
 
@@ -11,11 +12,34 @@
     </head>
     <body>
 
-        <h1>Image Editor</h1>
+    <!-- MENU BARS? -->
+        <header>
+        </header>
 
-        <input type="file" name="imgLoader">
+    <!-- MAIN -->
+        <main class="container-fluid">
+            <div class="row">
+                <div class="col-lg-2 testa">
 
-        <canvas id="canvas">SAAS</canvas>
+                </div>
+
+                <div class="col-lg-8 test">
+
+                </div>
+
+                <div class="col-lg-2 test">
+
+                </div>
+            </div>
+        </main>
+
+    <!-- SOME RANDOM THING -->
+        <footer>
+        </footer>
+
+        <!-- <input type="file" name="imgLoader">
+
+        <canvas id="canvas">SAAS</canvas> -->
 
         <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
