--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="col-lg-8 test">
-
+                    <a href="test.html">AAAAAAA</a>
                 </div>
 
                 <div class="col-lg-2 test">
