--- a/index.html
+++ b/index.html
@@ -14,20 +14,30 @@
 
     <!-- MENU BARS? -->
         <header>
+            <nav class="navbar navbar-light bg-light navbar-expand-md">
+                <!--  -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="">
+
+                </div>
+            </nav>
+
         </header>
 
     <!-- MAIN -->
         <main class="container-fluid">
             <div class="row">
-                <div class="col-lg-2 testa">
+                <div class="col-md-2">
 
                 </div>
 
-                <div class="col-lg-8 test">
-                    <a href="test.html">AAAAAAA</a>
+                <div class="col-md-8">
                 </div>
 
-                <div class="col-lg-2 test">
+                <div class="col-md-2">
 
                 </div>
             </div>
