--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 Arquivo
                             </a>
                             <div class="dropdown-menu">
-                                <input type="file" class="dropdown-item">
+                                <input type="file" class="custom-file-input dropdown-item">
                                 <a class="dropdown-item" href="#">Salvar...</a>
                             </div>
                         </li>
