--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
 
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
+
                     <!-- FILE SUBMENU -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
                                 Arquivo
                             </a>
                             <div class="dropdown-menu">
-                                <input type="file" class="custom-file-input dropdown-item">
+                                <input type="file" class="dropdown-item">
                                 <a class="dropdown-item" href="#">Salvar...</a>
                             </div>
                         </li>
 
                     <!-- FILTER SUBMENU -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
                                 Filtros
                             </a>
                             <div class="dropdown-menu">
@@ -53,11 +54,13 @@
     <!-- MAIN -->
         <main class="container-fluid">
             <div class="row">
+
                 <div class="col-md-2">
 
                 </div>
 
                 <div class="col-md-8">
+                    <canvas class="mainDraw" id="mainDraw"></canvas>
                 </div>
 
                 <div class="col-md-2">
