--- a/index.html
+++ b/index.html
@@ -67,8 +67,20 @@
         </main>
 
     <!-- SOME RANDOM THING -->
-        <footer>
-        </footer>
+    <footer>
+        <div class="container-fluid p-3 p-md-5">
+            <div class="col-md-12 col-sm-12">
+                <ul class = "bd-footer-links">
+                    <li><a href="#">Link1</a></li>
+                    <li><a href="#">Link2</a></li>
+                    <li><a href="#">Link3</a></li>
+                </ul>
+
+                <p>TextTextTextTextTextText</p>
+                <p>Currently beta v0.0.1.</p>
+            </div>
+        </div>
+    </footer>
 
         <!-- <input type="file" name="imgLoader">
 
