--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 Arquivo
                             </a>
                             <div class="dropdown-menu">
-                                <input type="file" class="dropdown-item">
+                                <input type="file" class="dropdown-item" id="fileInput">
                                 <a class="dropdown-item" href="#">Salvar...</a>
                             </div>
                         </li>
@@ -41,7 +41,7 @@
                             </a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="#">Carregar Imagem</a>
-                                <a class="dropdown-item" href="#">Salvar...</a>
+                                <a class="dropdown-item" href="img/background.png" download>Salvar...</a>
                             </div>
                         </li>
 
