--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                                 Arquivo
                             </a>
                             <div class="dropdown-menu">
-                                <input type="file" class="dropdown-item" id="fileInput">
+                                <button type="file" class="dropdown-item" id="fileInput" name="button">
+                                    Carregar Imagem
+                                </button>
                                 <a class="dropdown-item" href="#">Salvar...</a>
                             </div>
                         </li>
@@ -60,7 +62,8 @@
                 </div>
 
                 <div class="col-md-8">
-                    <canvas class="mainDraw" id="mainDraw"></canvas>
+                    <img id="inputImg" src=""></img>
+                    <canvas class="outputImg" id="outputImg"></canvas>
                 </div>
 
                 <div class="col-md-2">
@@ -70,7 +73,7 @@
         </main>
 
     <!-- SOME RANDOM THING -->
-    <footer>
+    <!-- <footer>
         <div class="container-fluid p-3 p-md-5">
             <div class="col-md-12 col-sm-12">
                 <ul class = "bd-footer-links">
@@ -83,11 +86,7 @@
                 <p>Currently beta v0.0.1.</p>
             </div>
         </div>
-    </footer>
-
-        <!-- <input type="file" name="imgLoader">
-
-        <canvas id="canvas">SAAS</canvas> -->
+    </footer> -->
 
         <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
