Download of the image added.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
                                 Arquivo
                             </a>
                             <div class="dropdown-menu">
-                                <button type="file" class="dropdown-item" id="fileInput" name="button">
+                                <input type="file" class="dropdown-item" id="fileInput">
+                                <!-- <button type="file" class="dropdown-item" id="fileInput">
                                     Carregar Imagem
-                                </button>
-                                <a class="dropdown-item" href="#">Salvar...</a>
+                                </button> -->
+                                <a id="btnDownload"class="dropdown-item" href="" download>Salvar...</a>
                             </div>
                         </li>
 
