--- a/index.html
+++ b/index.html
@@ -33,18 +33,54 @@
                                 <!-- <button type="file" class="dropdown-item" id="fileInput">
                                     Carregar Imagem
                                 </button> -->
-                                <a id="btnDownload"class="dropdown-item" href="" download>Salvar...</a>
+                                <a id="btnDownload" class="dropdown-item" href="#" download>Salvar...</a>
                             </div>
                         </li>
 
                     <!-- FILTER SUBMENU -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
-                                Filtros
+                                Filters
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Carregar Imagem</a>
-                                <a class="dropdown-item" href="img/background.png" download>Salvar...</a>
+                                <a class="dropdown-item" href="#">Blur</a>
+                                <a class="dropdown-item" href="#">Pixelize</a>
+                                <a class="dropdown-item" href="#">Sharpen</a>
+                                <a class="dropdown-item" href="#">Sépia</a>
+
+                                <h6 class="dropdown-header">Binarização</h6>
+                                <a class="dropdown-item" href="#">Thresholding</a>
+                                <a class="dropdown-item" href="#">Laplace</a>
+                                <a class="dropdown-item" href="#">Sobel</a>
+
+                                <h6 class="dropdown-header">Morphological Operations</h6>
+                                <a class="dropdown-item" href="#">Dilate</a>
+                                <a class="dropdown-item" href="#">Erode</a>
+                            </div>
+                        </li>
+
+                    <!-- TRANSFORMATIONS SUBMENU -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
+                                Transformations
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Cut Image</a>
+                                <a class="dropdown-item" href="#">Rotate</a>
+                                <a class="dropdown-item" href="#">Resize</a>
+                                <a class="dropdown-item" href="#">Flip Horizontally</a>
+                                <a class="dropdown-item" href="#">Flip Vertically</a>
+                            </div>
+                        </li>
+
+                    <!-- COLOR SUBMENU -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
+                                Color
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Color Histogram</a>
+                                <a class="dropdown-item" href="#">Brightness, Contrast, Saturation</a>
                             </div>
                         </li>
 
