--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -94,17 +95,35 @@
         <main class="container-fluid">
             <div class="row">
 
-                <div class="col-md-2">
+                <div class="col-md-1 tool-box">
+                    <div class="row">
+                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
+                            <i class="fas fa-pen"></i>
+                        </a>
+
+                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
+                            <i class="fas fa-pen"></i>
+                        </a>
+
+                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
+                            <i class="fas fa-pen"></i>
+                        </a>
+
+                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
+                            <i class="fas fa-pen"></i>
+                        </a>
+
+                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
+                            <i class="fas fa-pen"></i>
+                        </a>
+
+                    </div>
 
                 </div>
 
                 <div class="col-md-8">
                     <img id="inputImg" src=""></img>
-                    <canvas class="outputImg" id="outputImg"></canvas>
-                </div>
-
-                <div class="col-md-2">
-
+                    <canvas class="output-img" id="outputImg"></canvas>
                 </div>
             </div>
         </main>
