--- a/index.html
+++ b/index.html
@@ -95,25 +95,25 @@
         <main class="container-fluid">
             <div class="row">
 
-                <div class="col-md-1 tool-box">
+                <div class="col-md-1 tool-box border rounded-right">
                     <div class="row">
-                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
+                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
                             <i class="fas fa-pen"></i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
+                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
+                            <i class="fas fa-expand-arrows-alt"></i>
+                        </a>
+
+                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
+                            <i class="fas fa-redo-alt"></i>
+                        </a>
+
+                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
                             <i class="fas fa-pen"></i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
-                            <i class="fas fa-pen"></i>
-                        </a>
-
-                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
-                            <i class="fas fa-pen"></i>
-                        </a>
-
-                        <a href="#" class="col-md-4 offset-md-1 btn btn-outline-secondary">
+                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
                             <i class="fas fa-pen"></i>
                         </a>
 
