--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                                 <a class="dropdown-item" href="#">Pixelize</a>
                                 <a class="dropdown-item" href="#">Sharpen</a>
                                 <a class="dropdown-item" href="#">Sépia</a>
+                                <a class="dropdown-item" href="#" id="btnGrayScale">Gray Scale</a>
 
                                 <h6 class="dropdown-header">Binarização</h6>
                                 <a class="dropdown-item" href="#">Thresholding</a>
@@ -60,19 +61,6 @@
                             </div>
                         </li>
 
-                    <!-- TRANSFORMATIONS SUBMENU -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
-                                Transformations
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Cut Image</a>
-                                <a class="dropdown-item" href="#">Rotate</a>
-                                <a class="dropdown-item" href="#">Resize</a>
-                                <a class="dropdown-item" href="#">Flip Horizontally</a>
-                                <a class="dropdown-item" href="#">Flip Vertically</a>
-                            </div>
-                        </li>
 
                     <!-- COLOR SUBMENU -->
                         <li class="nav-item dropdown">
@@ -95,25 +83,25 @@
         <main class="container-fluid">
             <div class="row">
 
-                <div class="col-md-1 tool-box border rounded-right">
+                <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
-                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
+                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Pincel">
                             <i class="fas fa-pen"></i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
+                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Redimensionar">
                             <i class="fas fa-expand-arrows-alt"></i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
+                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Rotacionar">
                             <i class="fas fa-redo-alt"></i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
+                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Cortar Imagem">
                             <i class="fas fa-pen"></i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-1 btn btn-outline-secondary">
+                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Rotacionar">
                             <i class="fas fa-pen"></i>
                         </a>
 
@@ -148,6 +136,7 @@
         <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
         <script src="js/utils.js" type="text/javascript"></script>
         <script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>
+        <script src="js/filters.js" type="text/javascript"></script>
         <script src="js/main.js" type="text/javascript"></script>
 
     </body>
