--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
                                 Filters
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Blur</a>
-                                <a class="dropdown-item" href="#">Pixelize</a>
-                                <a class="dropdown-item" href="#">Sharpen</a>
-                                <a class="dropdown-item" href="#">Sépia</a>
+                                <h6 class="dropdown-header">Filters</h6>
+                                <a class="dropdown-item" href="#" id="btnBlur">Blur</a>
+                                <a class="dropdown-item" href="#" id="btnPixelize">Pixelize</a>
+                                <a class="dropdown-item" href="#" id="btnSharpen">Sharpen</a>
+                                <a class="dropdown-item" href="#" id="btnSepia">Sépia</a>
                                 <a class="dropdown-item" href="#" id="btnGrayScale">Gray Scale</a>
 
-                                <h6 class="dropdown-header">Binarização</h6>
+                                <h6 class="dropdown-header">Binarization</h6>
                                 <a class="dropdown-item" href="#">Thresholding</a>
                                 <a class="dropdown-item" href="#">Laplace</a>
                                 <a class="dropdown-item" href="#">Sobel</a>
