tools branch created

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                                 Arquivo
                             </a>
                             <div class="dropdown-menu">
+                                <a id="upload" class="dropdown-item" href="#" download>Open...</a>
                                 <input type="file" class="dropdown-item" id="fileInput">
                                 <!-- <button type="file" class="dropdown-item" id="fileInput">
                                     Carregar Imagem
