--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
     </head>
     <body>
 
+    <!-- MODALS -->
+        <div class="modal fade" id="morphModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalCenterTitle">Morphological options</h5>
+                        <a href="#" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </a>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="kerSize">Kernel Size</label>
+                            <input type="number" class="form-control" id="kerSize">
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Apply</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <!-- MENU BARS? -->
         <header>
             <nav class="navbar navbar-light bg-light navbar-expand-md">
@@ -45,20 +71,24 @@
                             </a>
                             <div class="dropdown-menu">
                                 <h6 class="dropdown-header">Filters</h6>
-                                <a class="dropdown-item" href="#" id="btnBlur">Blur</a>
-                                <a class="dropdown-item" href="#" id="btnPixelize">Pixelize</a>
-                                <a class="dropdown-item" href="#" id="btnSharpen">Sharpen</a>
+                                <a class="dropdown-item disabled" href="#" id="btnBlur">Blur</a>
+                                <a class="dropdown-item disabled" href="#" id="btnPixelize">Pixelize</a>
+                                <a class="dropdown-item disabled" href="#" id="btnSharpen">Sharpen</a>
                                 <a class="dropdown-item" href="#" id="btnSepia">Sépia</a>
                                 <a class="dropdown-item" href="#" id="btnGrayScale">Gray Scale</a>
 
+                                <hr>
                                 <h6 class="dropdown-header">Binarization</h6>
-                                <a class="dropdown-item" href="#">Thresholding</a>
-                                <a class="dropdown-item" href="#">Laplace</a>
-                                <a class="dropdown-item" href="#">Sobel</a>
 
+                                <a class="dropdown-item disabled" href="#" id="btnTresh">Thresholding</a>
+                                <a class="dropdown-item disabled" href="#" id="btnLaplace">Laplace</a>
+                                <a class="dropdown-item disabled" href="#" id="btnSobel">Sobel</a>
+
+                                <hr>
                                 <h6 class="dropdown-header">Morphological Operations</h6>
-                                <a class="dropdown-item" href="#">Dilate</a>
-                                <a class="dropdown-item" href="#">Erode</a>
+
+                                <a class="dropdown-item disabled" href="#" id="btnDilate" data-toggle="modal" data-target="#morphModal">Dilate</a>
+                                <a class="dropdown-item disabled" href="#" id="btnErode" data-toggle="modal" data-target="#morphModal">Erode</a>
                             </div>
                         </li>
 
@@ -69,8 +99,8 @@
                                 Color
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Color Histogram</a>
-                                <a class="dropdown-item" href="#">Brightness, Contrast, Saturation</a>
+                                <a class="dropdown-item disabled" href="#" id="btnColorHist">Color Histogram</a>
+                                <a class="dropdown-item disabled" href="#" id="btnColorSet">Brightness, Contrast, Saturation</a>
                             </div>
                         </li>
 
@@ -110,7 +140,7 @@
 
                 </div>
 
-                <div class="col-md-8">
+                <div class="col-md-8 offset-md-1">
                     <img id="inputImg" src=""></img>
                     <canvas class="output-img" id="outputImg"></canvas>
                 </div>
