--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
                 </div>
 
                 <div class="col-md-8 offset-md-1 out-img-container">
-                    <img id="inputImg" src=""></img>
-                    <canvas class="output-img" id="outputImg"></canvas>
+                    <!-- <center> -->
+                        <img id="inputImg" src=""></img>
+                        <canvas class="output-img" id="outputImg"></canvas>
+                    <!-- </center> -->
                 </div>
             </div>
         </main>
