--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                 <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
-                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Pincel">
+                        <a id = "pen" href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Pincel">
                             <i class="fas fa-pen"></i>
                         </a>
 
@@ -138,6 +138,7 @@
         <script src="js/utils.js" type="text/javascript"></script>
         <script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>
         <script src="js/filters.js" type="text/javascript"></script>
+        <script src="js/tools.js" type="text/javascript"></script>
         <script src="js/main.js" type="text/javascript"></script>
 
     </body>
