--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
 
     <!-- MODALS -->
-        <div class="modal fade" id="morphModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal fade" id="dilateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -27,13 +27,46 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="kerSize">Kernel Size</label>
-                            <input type="number" class="form-control" id="kerSize" min="1" max="25">
+                            <input type="number" class="form-control" id="kerSizeD" min="1" max="25">
+                            <select class="custom-select" id="kerShapeD">
+                                <option selected>Select the kernel shape</option>
+                                <option value="0">Rect</option>
+                            </select>
                         </div>
                     </div>
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="triggerMorph">Apply</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="triggerDilate">Apply</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="erodeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalCenterTitle">Morphological options</h5>
+                        <a href="#" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </a>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="kerSize">Kernel Size</label>
+                            <input type="number" class="form-control" id="kerSizeE" min="1" max="25">
+                            <select class="custom-select" id="kerShapeE">
+                                <option selected>Select the kernel shape</option>
+                                <option value="0">Rect</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="triggerErode">Apply</button>
                     </div>
                 </div>
             </div>
@@ -88,8 +121,8 @@
                                 <hr>
                                 <h6 class="dropdown-header">Morphological Operations</h6>
 
-                                <a class="dropdown-item disabled" href="#" id="btnDilate" data-toggle="modal" data-target="#morphModal">Dilate</a>
-                                <a class="dropdown-item disabled" href="#" id="btnErode" data-toggle="modal" data-target="#morphModal">Erode</a>
+                                <a class="dropdown-item" href="#" id="btnDilate" data-toggle="modal" data-target="#dilateModal">Dilate</a>
+                                <a class="dropdown-item" href="#" id="btnErode" data-toggle="modal" data-target="#erodeModal">Erode</a>
                             </div>
                         </li>
 
