--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                 <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
-                        <a id = "pen" href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Pincel">
+                        <a id = "triggerPen" href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Pincel">
                             <i class="fas fa-pen"></i>
                         </a>
 
