Beautiful file input

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                                 <!-- <div class="custom-file">
                                     <input type="file" class="custom-file-input">
                                 </div> -->
-                                <input type="file" class="dropdown-item" id="fileInput">
-
+                                <input type="file" class="dropdown-item input-file" id="fileInput">
+                                <label class="dropdown-item inp-file-label" for="fileInput">Upload image</label>
                                 <a id="triggerDownload" class="dropdown-item" href="#" download>Salvar...</a>
                             </div>
                         </li>
