--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
     </head>
     <body>
 
+    <!-- MODALS -->
+        <div class="modal fade" id="morphModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalCenterTitle">Morphological options</h5>
+                        <a href="#" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </a>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="kerSize">Kernel Size</label>
+                            <input type="number" class="form-control" id="kerSize" min="1" max="25">
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="triggerMorph">Apply</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <!-- MENU BARS? -->
         <header>
             <nav class="navbar navbar-light bg-light navbar-expand-md">
@@ -27,15 +53,15 @@
                     <!-- FILE SUBMENU -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
-                                Arquivo
+                                File
                             </a>
                             <div class="dropdown-menu">
-                                <a id="upload" class="dropdown-item" href="#" download>Open...</a>
+                                <!-- <div class="custom-file">
+                                    <input type="file" class="custom-file-input">
+                                </div> -->
                                 <input type="file" class="dropdown-item" id="fileInput">
-                                <!-- <button type="file" class="dropdown-item" id="fileInput">
-                                    Carregar Imagem
-                                </button> -->
-                                <a id="btnDownload" class="dropdown-item" href="#" download>Salvar...</a>
+
+                                <a id="triggerDownload" class="dropdown-item" href="#" download>Save...</a>
                             </div>
                         </li>
 
@@ -45,20 +71,25 @@
                                 Filters
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Blur</a>
-                                <a class="dropdown-item" href="#">Pixelize</a>
-                                <a class="dropdown-item" href="#">Sharpen</a>
-                                <a class="dropdown-item" href="#">Sépia</a>
-                                <a class="dropdown-item" href="#" id="btnGrayScale">Gray Scale</a>
+                                <h6 class="dropdown-header">Filters</h6>
+                                <a class="dropdown-item disabled" href="#" id="triggerBlur">Blur</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerPixelize">Pixelize</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerSharpen">Sharpen</a>
+                                <a class="dropdown-item" href="#" id="triggerSepia">Sépia</a>
+                                <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
 
-                                <h6 class="dropdown-header">Binarização</h6>
-                                <a class="dropdown-item" href="#">Thresholding</a>
-                                <a class="dropdown-item" href="#">Laplace</a>
-                                <a class="dropdown-item" href="#">Sobel</a>
+                                <hr>
+                                <h6 class="dropdown-header">Binarization</h6>
 
+                                <a class="dropdown-item disabled" href="#" id="triggerTresh">Thresholding</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerLaplace">Laplace</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerSobel">Sobel</a>
+
+                                <hr>
                                 <h6 class="dropdown-header">Morphological Operations</h6>
-                                <a class="dropdown-item" href="#">Dilate</a>
-                                <a class="dropdown-item" href="#">Erode</a>
+
+                                <a class="dropdown-item disabled" href="#" id="btnDilate" data-toggle="modal" data-target="#morphModal">Dilate</a>
+                                <a class="dropdown-item disabled" href="#" id="btnErode" data-toggle="modal" data-target="#morphModal">Erode</a>
                             </div>
                         </li>
 
@@ -69,8 +100,8 @@
                                 Color
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Color Histogram</a>
-                                <a class="dropdown-item" href="#">Brightness, Contrast, Saturation</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerColorHist">Color Histogram</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerColorSet">Brightness, Contrast, Saturation</a>
                             </div>
                         </li>
 
@@ -86,7 +117,7 @@
 
                 <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
-                        <a id = "triggerPen" href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Pincel">
+                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerPen" data-toggle="tooltip" data-placement="right" title="Pincel">
                             <i class="fas fa-pen"></i>
                         </a>
 
@@ -110,24 +141,22 @@
 
                 </div>
 
-                <div class="col-md-8">
-                    <img id="inputImg" src=""></img>
-                    <canvas class="output-img" id="outputImg"></canvas>
+                <div class="col-md-8 offset-md-1 out-img-container">
+                    <!-- <center> -->
+                        <img id="inputImg" src=""></img>
+                        <canvas class="output-img" id="outputImg" width="910" height="445"></canvas>
+                    <!-- </center> -->
                 </div>
             </div>
         </main>
 
     <!-- SOME RANDOM THING -->
-    <!-- <footer>
+    <!-- <footer class="shadow-sm bg-light">
         <div class="container-fluid p-3 p-md-5">
             <div class="col-md-12 col-sm-12">
                 <ul class = "bd-footer-links">
-                    <li><a href="#">Link1</a></li>
-                    <li><a href="#">Link2</a></li>
-                    <li><a href="#">Link3</a></li>
+                    <li><a href="#">UFFS</a></li>
                 </ul>
-
-                <p>TextTextTextTextTextText</p>
                 <p>Currently beta v0.0.1.</p>
             </div>
         </div>
@@ -136,10 +165,10 @@
         <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
         <script src="js/utils.js" type="text/javascript"></script>
-        <script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>
+        <!--<script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>-->
         <script src="js/filters.js" type="text/javascript"></script>
         <script src="js/tools.js" type="text/javascript"></script>
-        <script src="js/main.js" type="text/javascript"></script>
+        <!--<script src="js/main.js" type="text/javascript"></script>-->
 
     </body>
 </html>
