Some issues solved

--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
         <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
         <script src="js/utils.js" type="text/javascript"></script>
-        <!--<script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>-->
+        <script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>
         <script src="js/filters.js" type="text/javascript"></script>
         <script src="js/tools.js" type="text/javascript"></script>
-        <!--<script src="js/main.js" type="text/javascript"></script>-->
+        <script src="js/main.js" type="text/javascript"></script>
 
     </body>
 </html>
