--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
                             <i class="fas fa-pen"></i>
                         </a>
 
+                        <input class="icon col-md-4 offset-md-3 btn btn-outline-secondary jscolor" data-toggle="tooltip" data-placement="right" title="Choose color" value="fff">
+
                     </div>
 
                 </div>
@@ -168,13 +170,15 @@
         </div>
     </footer> -->
 
-        <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
-        <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
-        <script src="js/utils.js" type="text/javascript"></script>
-        <script src="js/opencv.js" type="text/javascript" id="opencvJSFile"></script>
-        <script src="js/filters.js" type="text/javascript"></script>
-        <script src="js/tools.js" type="text/javascript"></script>
-        <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
+        <script src="js/bootstrap.bundle.min.js" charset="utf-8"></script>
+        <script src="js/utils.js" charset="utf-8"></script>
+        <script src="js/opencv.js" charset="utf-8" id="opencvJSFile"></script>
+        <script src="js/filters.js" charset="utf-8"></script>
+        <script src="js/tools.js" charset="utf-8"></script>
+        <script src="js/jscolor.js" charset="utf-8"></script>
+        <script src="js/main.js" charset="utf-8"></script>
+
 
     </body>
 </html>
