--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="dropdown-menu">
                                 <h6 class="dropdown-header">Filters</h6>
                                 <a class="dropdown-item disabled" href="#" id="triggerBlur">Blur</a>
-                                <a class="dropdown-item disabled" href="#" id="triggerPixelize">Pixelize</a>
+                                <a class="dropdown-item" href="#" id="triggerPixelize">Pixelize</a>
                                 <a class="dropdown-item disabled" href="#" id="triggerSharpen">Sharpen</a>
                                 <a class="dropdown-item" href="#" id="triggerSepia">Sépia</a>
                                 <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
@@ -114,7 +114,7 @@
                                 <hr>
                                 <h6 class="dropdown-header">Binarization</h6>
 
-                                <a class="dropdown-item disabled" href="#" id="triggerTresh">Thresholding</a>
+                                <a class="dropdown-item" href="#" id="triggerTresh">Thresholding</a>
                                 <a class="dropdown-item disabled" href="#" id="triggerLaplace">Laplace</a>
                                 <a class="dropdown-item disabled" href="#" id="triggerSobel">Sobel</a>
 
