--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                 </div>
 
-                <div class="col-md-8 offset-md-1 out-img-container">
+                <div class="col-md-8 offset-md-1 out-img-container" id="outImgContainer">
                     <!-- <center> -->
                         <img id="inputImg" src=""></img>
 
