--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                 <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
-                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" id="penTrigger" data-toggle="tooltip" data-placement="right" title="Pincel">
+                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerPen" data-toggle="tooltip" data-placement="right" title="Pincel">
                             <i class="fas fa-pen"></i>
                         </a>
 
@@ -131,7 +131,7 @@
                             <i class="fas fa-redo-alt"></i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Cortar Imagem">
+                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerCutImg" data-toggle="tooltip" data-placement="right" title="Cortar Imagem">
                             <i class="fas fa-pen"></i>
                         </a>
 
