--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -119,23 +119,31 @@
 
                 <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
-                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" id="penTrigger" data-toggle="tooltip" data-placement="right" title="Pincel">
-                            <i class="fas fa-pen"></i>
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="penTrigger" data-toggle="tooltip" data-placement="right" title="Pincel">
+                            <i class="material-icons">
+                                edit
+                            </i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Redimensionar">
-                            <i class="fas fa-expand-arrows-alt"></i>
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Redimensionar">
+                            <i class="material-icons">
+                                crop_free
+                            </i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Rotacionar">
-                            <i class="fas fa-redo-alt"></i>
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Rotacionar">
+                            <i class="material-icons">
+                                loop
+                            </i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Cortar Imagem">
-                            <i class="fas fa-pen"></i>
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Cortar Imagem">
+                            <i class="material-icons">
+                                crop
+                            </i>
                         </a>
 
-                        <a href="#" class="icon col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Rotacionar">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Espelhar Verticalmente">
                             <i class="fas fa-pen"></i>
                         </a>
 
