color picker working, fix input color bug content

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <i class="fas fa-pen"></i>
                         </a>
 
-                        <input class="icon col-md-4 offset-md-3 btn btn-outline-secondary jscolor" data-toggle="tooltip" data-placement="right" title="Choose color" value="fff">
+                        <input class="icon col-md-4 offset-md-3 btn btn-outline-secondary jscolor" data-toggle="tooltip" data-placement="left" title="Choose color">
 
                     </div>
 
