--- a/index.html
+++ b/index.html
@@ -153,33 +153,35 @@
                 <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="penTrigger" data-toggle="tooltip" data-placement="right" title="Pincel">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerPen" data-toggle="tooltip" data-placement="right" title="Pincel">
                             <i class="material-icons">
                                 edit
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Redimensionar">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerResize" data-toggle="tooltip" data-placement="right" title="Redimensionar">
                             <i class="material-icons">
                                 crop_free
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Rotacionar">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerRotate" data-toggle="tooltip" data-placement="right" title="Rotacionar">
                             <i class="material-icons">
                                 loop
                             </i>
                         </a>
 
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Cortar Imagem">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerCutImg" data-toggle="tooltip" data-placement="right" title="Cortar Imagem">
                             <i class="material-icons">
                                 crop
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Espelhar Verticalmente">
-                            <i class="fas fa-pen"></i>
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerFlip" data-toggle="tooltip" data-placement="right" title="Espelhar Verticalmente">
+                            <i class="material-icons">
+                                vertical_align_center
+                            </i>
                         </a>
 
                         <input class="icon col-md-4 offset-md-3 btn btn-outline-secondary jscolor" data-toggle="tooltip" data-placement="left" title="Choose color">
