--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                             </a>
                             <div class="dropdown-menu">
                                 <h6 class="dropdown-header">Filters</h6>
-                                <a class="dropdown-item disabled" href="#" id="triggerBlur">Blur</a>
+                                <a class="dropdown-item" href="#" id="triggerBlur">Blur</a>
                                 <a class="dropdown-item" href="#" id="triggerPixelize">Pixelize</a>
-                                <a class="dropdown-item disabled" href="#" id="triggerSharpen">Sharpen</a>
+                                <a class="dropdown-item" href="#" id="triggerSharpen">Sharpen</a>
                                 <a class="dropdown-item" href="#" id="triggerSepia">Sépia</a>
                                 <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
 
