--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                                 <a class="dropdown-item" href="#" id="triggerTresh">Thresholding</a>
                                 <a class="dropdown-item disabled" href="#" id="triggerLaplace">Laplace</a>
-                                <a class="dropdown-item disabled" href="#" id="triggerSobel">Sobel</a>
+                                <a class="dropdown-item" href="#" id="triggerSobel">Sobel</a>
 
                                 <hr>
                                 <h6 class="dropdown-header">Morphological Operations</h6>
