--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <h6 class="dropdown-header">Binarization</h6>
 
                                 <a class="dropdown-item" href="#" id="triggerTresh">Thresholding</a>
-                                <a class="dropdown-item disabled" href="#" id="triggerLaplace">Laplace</a>
+                                <a class="dropdown-item" href="#" id="triggerLaplace">Laplace</a>
                                 <a class="dropdown-item" href="#" id="triggerSobel">Sobel</a>
 
                                 <hr>
