Options' order corrected and minor code changes.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                                 <input type="file" class="dropdown-item input-file" id="fileInput">
                                 <label class="dropdown-item inp-file-label" for="fileInput">Upload image</label>
-                                <a id="triggerDownload" class="dropdown-item" href="#" download>Salvar...</a>
+                                <a id="triggerDownload" class="dropdown-item" href="#" download>Download image</a>
                             </div>
                         </li>
 
@@ -107,18 +107,18 @@
                             <div class="dropdown-menu">
                                 <h6 class="dropdown-header">Filters</h6>
                                 <a class="dropdown-item" href="#" id="triggerBlur">Blur</a>
+                                <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
+                                <a class="dropdown-item" href="#" id="triggerSepia">Sepia</a>
                                 <a class="dropdown-item" href="#" id="triggerPixelize">Pixelize</a>
                                 <a class="dropdown-item" href="#" id="triggerSharpen">Sharpen</a>
-                                <a class="dropdown-item" href="#" id="triggerSepia">Sépia</a>
-                                <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
 
 
                                 <hr>
                                 <h6 class="dropdown-header">Binarization</h6>
 
                                 <a class="dropdown-item" href="#" id="triggerTresh">Thresholding</a>
-                                <a class="dropdown-item" href="#" id="triggerLaplace">Laplace</a>
                                 <a class="dropdown-item" href="#" id="triggerSobel">Sobel</a>
+                                <a class="dropdown-item" href="#" id="triggerLaplace">Laplace</a>
 
                                 <hr>
                                 <h6 class="dropdown-header">Morphological Operations</h6>
