--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="penTrigger" data-toggle="tooltip" data-placement="right" title="Pincel">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerPen" data-toggle="tooltip" data-placement="right" title="Pincel">
                             <i class="material-icons">
                                 edit
                             </i>
@@ -190,7 +190,7 @@
                         <label for="customRange1">Example range</label>-->
                         <div class="col-md-9" id="penSize">
                             <input type="text" class="form-control" id="size" value="5">
-                            <input type="range" min="0" max="20" step="1" value = "5" class="custom-range" id="inputSize">
+                            <input type="range" min="1" max="20" step="1" value = "5" class="custom-range" id="inputSize">
                         </div>
                     </div>
 
@@ -224,7 +224,7 @@
         <script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
         <script src="js/bootstrap.bundle.min.js" charset="utf-8"></script>
         <script src="js/utils.js" charset="utf-8"></script>
-        <!--<script src="js/opencv.js" charset="utf-8" id="opencvJSFile"></script>-->
+        <script src="js/opencv.js" charset="utf-8" id="opencvJSFile"></script>
         <script src="js/filters.js" charset="utf-8"></script>
         <script src="js/tools.js" charset="utf-8"></script>
         <script src="js/jscolor.js" charset="utf-8"></script>
