--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                                 <a class="dropdown-item" href="#" id="triggerSepia">Sepia</a>
                                 <a class="dropdown-item" href="#" id="triggerPixelize">Pixelize</a>
                                 <a class="dropdown-item" href="#" id="triggerSharpen">Sharpen</a>
+                                <a class="dropdown-item" href="#" id="triggerNegative">Negative</a>
 
 
                                 <hr>
