commiting 'cause i want to checkout to other branch

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                                 <input type="file" class="dropdown-item input-file" id="fileInput">
                                 <label class="dropdown-item inp-file-label" for="fileInput">Upload image</label>
-                                <a id="triggerDownload" class="dropdown-item" href="#" download>Download image</a>
+                                <a id="triggerDownload" class="dropdown-item" href="#" download>Salvar...</a>
                             </div>
                         </li>
 
@@ -106,20 +106,19 @@
                             </a>
                             <div class="dropdown-menu">
                                 <h6 class="dropdown-header">Filters</h6>
-                                <a class="dropdown-item" href="#" id="triggerBlur">Blur</a>
-                                <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
-                                <a class="dropdown-item" href="#" id="triggerSepia">Sepia</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerBlur">Blur</a>
                                 <a class="dropdown-item" href="#" id="triggerPixelize">Pixelize</a>
-                                <a class="dropdown-item" href="#" id="triggerSharpen">Sharpen</a>
-                                <a class="dropdown-item" href="#" id="triggerNegative">Negative</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerSharpen">Sharpen</a>
+                                <a class="dropdown-item" href="#" id="triggerSepia">Sépia</a>
+                                <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
 
 
                                 <hr>
                                 <h6 class="dropdown-header">Binarization</h6>
 
                                 <a class="dropdown-item" href="#" id="triggerTresh">Thresholding</a>
-                                <a class="dropdown-item" href="#" id="triggerSobel">Sobel</a>
-                                <a class="dropdown-item" href="#" id="triggerLaplace">Laplace</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerLaplace">Laplace</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerSobel">Sobel</a>
 
                                 <hr>
                                 <h6 class="dropdown-header">Morphological Operations</h6>
@@ -179,20 +178,20 @@
                             </i>
                         </a>
 
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Adicionar Texto">
+                            <i class="material-icons">
+                                format_shapes
+                            </i>
+                        </a>
+
                         <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Espelhar Verticalmente">
-                            <i class="fas fa-pen"></i>
+                            <i class="material-icons">
+                                flip
+                            </i>
                         </a>
 
                         <input class="icon col-md-4 offset-md-3 btn btn-outline-secondary jscolor" data-toggle="tooltip" data-placement="left" title="Choose color" value="fff">
 
-                        <!--<div class="swipe-path" id="swipePath">
-                            <div class="swipe-button" id="swipeButton"></div>
-                        </div>
-                        <label for="customRange1">Example range</label>-->
-                        <div class="col-md-9" id="penSize">
-                            <input type="text" class="form-control" id="size" value="5">
-                            <input type="range" min="1" max="20" step="1" value = "5" class="custom-range" id="inputSize">
-                        </div>
                     </div>
 
                 </div>
@@ -225,7 +224,7 @@
         <script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
         <script src="js/bootstrap.bundle.min.js" charset="utf-8"></script>
         <script src="js/utils.js" charset="utf-8"></script>
-        <script src="js/opencv.js" charset="utf-8" id="opencvJSFile"></script>
+        <!-- <script src="js/opencv.js" charset="utf-8" id="opencvJSFile"></script> -->
         <script src="js/filters.js" charset="utf-8"></script>
         <script src="js/tools.js" charset="utf-8"></script>
         <script src="js/jscolor.js" charset="utf-8"></script>
